# nlp_extractor_simple

./: pyproject.toml
